@@ -10,3 +10,6 @@ config.h.in
 config.sub
 ltmain.sh
 aclocal.m4
+config.h
+stamp-h
+stamp-h.in
