@@ -46,7 +46,14 @@ void test_general(const C& c)
 
   std::string s = ToString(c); // Uses operator<<() implicitly
   C c3;
-  FromString(c3, s); // Uses operator>>() implicitly
+  try {
+    FromString(c3, s); // Uses operator>>() implicitly
+  }
+  catch(ParseError) {
+    cerr << "Couldn't parse generated string: " << s << std::endl;
+    abort();
+  }
+
   // We lose precision in string conversion
   assert(Equal(c3, c, FloatMax(WFMATH_EPSILON, 1e-5)));
 }
